# mandarin

./: .env.example  .gitignore  Makefile
backend/: Dockerfile  pyproject.toml  render.yaml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: evaluate.py  pdf.py
backend/app/services/: comparison.py  pdf_service.py  pinyin_service.py
backend/app/services/transcription/: base.py  factory.py  funasr_backend.py  groq_whisper.py  whisper.py
backend/tests/: test_comparison.py  test_evaluate_endpoint.py  test_pinyin_service.py
coding-agent/: GAP_ANALYSIS.md  README.md  pyproject.toml
coding-agent/src/: agent.py  cli.py
coding-agent/src/llm/: client.py
coding-agent/src/tools/: __init__.py  definitions.py  registry.py
docs/: README.md  ROADMAP.md  STATUS.md
docs/references/: architecture.md  speech-to-text-research.md
docs/runbooks/: local-dev.md  phone-access.md
docs/strategy/: design-decisions.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: RecordButton.tsx  SentenceCard.tsx  SentenceList.tsx  SettingsPanel.tsx  TextInput.tsx  VadRecordButton.tsx
frontend/app/hooks/: useSettings.ts
frontend/app/lib/: api.ts  audio.ts  pinyin.ts  sentences.ts
frontend/app/types/: index.ts
frontend/tests/: mobile-text-visibility.test.mjs
