[project]
name = "mandarin-backend"
version = "0.1.0"
description = "Mandarin pronunciation practice - FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.0",
    "pypinyin>=0.53",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "pymupdf>=1.25",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
funasr = [
    "funasr>=1.0",
    "torch",
    "torchaudio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
